--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bondinho do Amor 🚋💛</title>
+    <title>Estação Caminho das Entrelinhas 🚋💛</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <div class="hills"></div>
 
     <div class="container">
-        <h1>Bondinho do Amor</h1>
+        <h1>Estação Caminho das Entrelinhas</h1>
         
         <div class="bondinho-interativo" id="bondinhoInterativo">
             <img src="assets/bondinho.svg" alt="Bondinho">
