--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     <div class="response-message" id="positiveResponse">
         <button class="close-btn" id="closePositive">×</button>
         <h2 style="font-family: 'Pacifico', cursive; margin-bottom: 15px; color: #FF968A;">Maravilha! 💖</h2>
-        <p>Prepare-se para um passeio incrível!<br>O bondinho da paixão está chegando na sua estação...</p>
+        <p>Atenção passageira: embarque aprovado e sorrisos liberados.<br>Prepare-se para um passeio incrível!</p>
     </div>
     
     <div class="response-message" id="negativeResponse">
         <button class="close-btn" id="closeNegative">×</button>
         <h2 style="font-family: 'Pacifico', cursive; margin-bottom: 15px; color: #666;">Poxa... 😢</h2>
-        <p>Tudo bem... mas perdeu o bondinho da paixão 🚋💔</p>
-        <p style="margin-top: 10px; font-size: 0.9rem;">(O próximo só daqui a 30 dias!)</p>
+        <p>Tudo bem… algumas rotas não se encontram agora. 🚋💔</p>
+        <p style="margin-top: 10px; font-size: 0.9rem;">(Até lá, a estação fica guardada no coração.)</p>
     </div>
 
     <script src="script.js"></script>
